--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -110,20 +110,7 @@
                 <input type="submit" value="Remove">
             </div>
         </td>
-        <td>
-            <p class="toggleHead"
-               th:attr="onclick=|toggleData('psSelect${order.orderId}')|"
-               th:text="${order.payment.paymentStatus}"></p>
-
-                <select th:id="psSelect + ${order.orderId}" class="toggle" name="payment.paymentStatus"
-                         onchange="this.form.submit()">
-                    <option selected disabled value="Select">Select</option>
-                    <option th:each="status : ${paymentStatus}"
-                            th:value="${status}"
-                            th:text="${status}"
-                    ></option>
-                </select>
-        </td>
+        <td th:text="${order.payment.paymentStatus}"></td>
         <td th:text="${order.orderStatus}"></td>
         <td>
             <a th:href="@{/edit-order?id={id}(id=${order.orderId})}">Edit</a>
