--- a/src/main/resources/templates/employee/save-employee.html
+++ b/src/main/resources/templates/employee/save-employee.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Save employee</title>
+  <style>
+    .error {
+      color: red;
+    }
+  </style>
 </head>
 <body>
 <div th:insert="~{general.html :: navbar}"></div>
 <form action="#" th:action="@{/save-employee}" th:object="${employee}" method="post">
   <input type="hidden" th:field="*{employeeId}">
   <label>Firstname: <input type="text" th:field="*{firstname}"></label> <br>
-  <p th:if="${#fields.hasErrors('firstname')}">Invalid firstname</p>
+  <p th:if="${#fields.hasErrors('firstname')}" th:errorclass="error" th:errors="*{firstname}"></p>
   <label>Lastname: <input type="text" th:field="*{lastname}"></label> <br>
+  <p th:if="${#fields.hasErrors('lastname')}" th:errorclass="error" th:errors="*{lastname}"></p>
   <label>Role:
     <select th:field="*{role}">
       <option th:each="role : ${roles}"
@@ -21,11 +27,14 @@
     <a href="/add-role">Add new role</a>
   </label> <br>
   <label>PhoneNo: <input type="number" th:field="*{phoneNo}"></label> <br>
+  <p th:if="${#fields.hasErrors('phoneNo')}" th:errorclass="error" th:errors="*{phoneNo}"></p>
   <label>Email address: <input type="email" th:field="*{emailAddress}"></label> <br>
+  <p th:if="${#fields.hasErrors('emailAddress')}" th:errorclass="error" th:errors="*{emailAddress}"></p>
   <label>Gender:
     <input type="radio" th:field="*{gender}" th:value="Male"> Male
     <input type="radio" th:field="*{gender}" th:value="Female"> Female
   </label> <br>
+  <p th:if="${#fields.hasErrors('gender')}" th:errorclass="error" th:errors="*{gender}"></p>
   <input type="submit" value="save">
 </form>
 <div th:replace="~{general.html :: back}"></div>
