--- a/src/main/resources/templates/employee/role/save-role.html
+++ b/src/main/resources/templates/employee/role/save-role.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Save role</title>
+    <style>
+    .error {
+      color: red;
+    }
+  </style>
 </head>
 <body>
 <div th:insert="~{general.html :: navbar}"></div>
 <form action="#" th:action="@{/save-role}" th:object="${role}" method="post">
     <input type="hidden" th:field="*{roleId}">
     <label>Role: <input type="text" th:field="*{name}"></label> <br>
+    <p th:if="${#fields.hasErrors('name')}" th:errorclass="error" th:errors="*{name}"></p>
   <input type="submit" value="save">
 </form>
 <div th:replace="~{general.html :: back}"></div>
