--- a/src/main/resources/templates/employee/save-employee.html
+++ b/src/main/resources/templates/employee/save-employee.html
@@ -17,14 +17,14 @@
   <p th:if="${#fields.hasErrors('firstname')}" th:errorclass="error" th:errors="*{firstname}"></p>
   <label>Lastname: <input type="text" th:field="*{lastname}"></label> <br>
   <p th:if="${#fields.hasErrors('lastname')}" th:errorclass="error" th:errors="*{lastname}"></p>
-  <label>Username: <input type="text" th:field="*{username}"></label> <br>
-  <p th:if="${#fields.hasErrors('username')}" th:errorclass="error" th:errors="*{username}"></p>
+  <label>Username: <input type="text" th:field="*{account.username}"></label> <br>
+  <p th:if="${#fields.hasErrors('account.username')}" th:errorclass="error" th:errors="*{account.username}"></p>
   <label>PhoneNo: <input type="number" th:field="*{phoneNo}"></label> <br>
   <p th:if="${#fields.hasErrors('phoneNo')}" th:errorclass="error" th:errors="*{phoneNo}"></p>
   <label>Email address: <input type="email" th:field="*{emailAddress}"></label> <br>
   <p th:if="${#fields.hasErrors('emailAddress')}" th:errorclass="error" th:errors="*{emailAddress}"></p>
-  <label>Password: <input type="password" th:field="*{password}"></label> <br>
-  <p th:if="${#fields.hasErrors('password')}" th:errorclass="error" th:errors="*{password}"></p>
+  <label>Password: <input type="password" th:field="*{account.password}"></label> <br>
+  <p th:if="${#fields.hasErrors('account.password')}" th:errorclass="error" th:errors="*{account.password}"></p>
   <label>Role:
     <select th:field="*{role}">
       <option th:each="role : ${roles}"
@@ -41,6 +41,7 @@
   <p th:if="${#fields.hasErrors('gender')}" th:errorclass="error" th:errors="*{gender}"></p>
   <input type="submit" value="save">
 </form>
+
 <div th:replace="~{general.html :: back}"></div>
 </body>
 </html>
