Refactored update employee link

--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -40,7 +40,7 @@
                 <a class="toggleHead"
                    th:attr="onclick=|toggleData('update-link${emp.employeeId}')|">Update</a>
                 <div th:id="update-link+${emp.employeeId}" class="toggle">
-                    <a th:href="@{|/update-emp-info?id=${emp.employeeId}|}">Update info</a>
+                    <a th:href="@{|/update-employee?id=${emp.employeeId}|}">Update info</a>
                     <a th:href="@{|/update-emp-account?id=${emp.employeeId}|}">Update account</a>
                 </div>
                 <a th:href="@{|/delete-employee?id=${emp.employeeId}|}">Delete</a>
